# art_pi2_bootloader

./: .gitignore  LICENSE  README.md
common/: firmware_header.h  firmware_loader.c  firmware_loader.h  fw_header.c  ymodem.c  ymodem.h
linker/: fw_header.ld
spl/: CMakeLists.txt  Kconfig  prj.conf
spl/boards/: art_pi2.overlay
spl/src/: flash_helper.c  flash_helper.h  main.c  menu.c  menu.h
tools/: fw_patch.py  fw_summary.py
tpl/: CMakeLists.txt  prj.conf
tpl/boards/: art_pi2.overlay
tpl/scripts/: gen_tpl_fw.sh
tpl/src/: fastboot.c  fastboot.h  fastboot_ops.c  flash_helper.c  flash_helper.h  main.c  menu.c  menu.h  update_app.c  update_spl.c  update_tpl.c
